--- a/gb/21/12/8/n13424450.md
+++ b/gb/21/12/8/n13424450.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wzpiqm352/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/wzpiqm352/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/wzpiqm352/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wzpiqm352/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/wzpiqm352/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wzpiqm352/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/wzpiqm352/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wzpiqm352/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/wzpiqm352/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wzpiqm352/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/wzpiqm352/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wzpiqm352/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/wzpiqm352/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wzpiqm352/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/wzpiqm352/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wzpiqm352/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/wzpiqm352/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wzpiqm352/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/wzpiqm352/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wzpiqm352/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wzpiqm352/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/wzpiqm352/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wzpiqm352/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wzpiqm352/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wzpiqm352/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wzpiqm352/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wzpiqm352/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wzpiqm352/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wzpiqm352/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wzpiqm352/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wzpiqm352/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wzpiqm352/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wzpiqm352/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/wzpiqm352/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wzpiqm352/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wzpiqm352/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wzpiqm352/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wzpiqm352/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wzpiqm352/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wzpiqm352/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wzpiqm352/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wzpiqm352/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wzpiqm352/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/wzpiqm352/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wzpiqm352/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wzpiqm352/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wzpiqm352/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>美参众两院达共识 维持美军阻中共攻台</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/12/id13424452-531130-600x400.jpg" />
 <h6>图为美军F-35战机。（美国太平洋舰队Flickr）
 </h6>
 <hr>
-<p>【大纪元2021年12月08日讯】（大纪元记者赖意晴、李怡欣台湾台北报导）美国参众两院军委会周二（12月7日）就2022财政年度“<ahref="https://github.com/wzpiqm352/djy/blob/master/gb/tag/%E5%9B%BD%E9%98%B2%E6%8E%88%E6%9D%83%E6%B3%95%E6%A1%88.md#1">国防授权法案</a>”（FY 2022 NDAA）最后版本达成共识，美国政策将维持美军阻止中共武力犯台，法案还建议美国国防部邀请台湾参加2022年<ahref="https://github.com/wzpiqm352/djy/blob/master/gb/tag/%E7%8E%AF%E5%A4%AA%E5%B9%B3%E6%B4%8B%E5%86%9B%E6%BC%94.md#1">环太平洋军演</a>（RIMPAC）。</p>
+<p>【大纪元2021年12月08日讯】（大纪元记者赖意晴、李怡欣台湾台北报导）美国参众两院军委会周二（12月7日）就2022财政年度“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9B%BD%E9%98%B2%E6%8E%88%E6%9D%83%E6%B3%95%E6%A1%88.md#1">国防授权法案</a>”（FY 2022 NDAA）最后版本达成共识，美国政策将维持美军阻止中共武力犯台，法案还建议美国国防部邀请台湾参加2022年<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%8E%AF%E5%A4%AA%E5%B9%B3%E6%B4%8B%E5%86%9B%E6%BC%94.md#1">环太平洋军演</a>（RIMPAC）。</p>
 <figure id="13424453" aria-describedby="caption-13424453" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/12/id13424453-531133-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/12/id13424453-531133-450x300.jpg" alt="图为美军航舰。" width="500" /></a><figcaption id="caption-13424453" class="wp-caption-text">图为美军航舰。（美国太平洋舰队Flickr）</figcaption></figure>
-<p>法案总额高达7,680亿美元（约新台币21兆元），其中包括为了威吓中共所提出的“太平洋吓阻倡议”（Pacific Deterrence Initiative）的71亿美元。国会在法案中呼吁，美方可以与台湾进行实地训练与军事演习，并邀请台湾参与2022年<ahref="https://github.com/wzpiqm352/djy/blob/master/gb/tag/%E7%8E%AF%E5%A4%AA%E5%B9%B3%E6%B4%8B%E5%86%9B%E6%BC%94.md#1">环太平洋军演</a>，使台台湾能确保足够的自我防卫能力。</p>
+<p>法案总额高达7,680亿美元（约新台币21兆元），其中包括为了威吓中共所提出的“太平洋吓阻倡议”（Pacific Deterrence Initiative）的71亿美元。国会在法案中呼吁，美方可以与台湾进行实地训练与军事演习，并邀请台湾参与2022年<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%8E%AF%E5%A4%AA%E5%B9%B3%E6%B4%8B%E5%86%9B%E6%BC%94.md#1">环太平洋军演</a>，使台台湾能确保足够的自我防卫能力。</p>
 <p>法案关于台湾部分主要在第1246至1249条。国会指出，美国的政策是维持美军阻止中共武力犯台湾部分主要在第1246至1249条。国会指出，美国的政策是维持美军阻止中共武力犯台，并要求美国国防部长须在2022年至2027年向国会提供年度报告，评估协助台湾发展不对称防御战略、不对称防卫能力，以及与美国和盟友的相互可操作性，并加强美国国民兵（National<br />
 Guard）与台湾的合作。</p>
 <h2>法案吁加强美台官员交流</h2>
@@ -31,47 +31,47 @@ Guard）与台湾的合作。</p>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/11/29/n13406398.md#1">多国秘密帮助台湾打造潜艇舰队 对抗中共</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/1/n13410526.md#1">安倍三提习不要误判 专家：日台将强化合作</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/2/n13411810.md#1">专家：台湾造潜艇 提升防御中共侵扰能力</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/2/n13413327.md#1">沈舟：印太冲突风险大 美军战略调整动真格</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/3/n13415531.md#1">周晓辉：英日警告北京莫误判 中南海情报有假？</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/3/n13415815.md#1">郝平：2022年 中共会发动侵台战争吗？</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/4/n13417180.md#1">【时事军事】Y-20U加油机也扰台 中共想太多了</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/5/n13418240.md#1">中共加大武力威胁 矢板明夫：攻台概率很低</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/5/n13418459.md#1">沈舟：中共军队公布的主战装备啥水平（二）</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/6/n13419762.md#1">专家：全球政经风暴下 台湾有哪些机遇与挑战</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/29/n13406398.md#1">多国秘密帮助台湾打造潜艇舰队 对抗中共</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/1/n13410526.md#1">安倍三提习不要误判 专家：日台将强化合作</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/2/n13411810.md#1">专家：台湾造潜艇 提升防御中共侵扰能力</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/2/n13413327.md#1">沈舟：印太冲突风险大 美军战略调整动真格</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/3/n13415531.md#1">周晓辉：英日警告北京莫误判 中南海情报有假？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/3/n13415815.md#1">郝平：2022年 中共会发动侵台战争吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/4/n13417180.md#1">【时事军事】Y-20U加油机也扰台 中共想太多了</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/5/n13418240.md#1">中共加大武力威胁 矢板明夫：攻台概率很低</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/5/n13418459.md#1">沈舟：中共军队公布的主战装备啥水平（二）</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/6/n13419762.md#1">专家：全球政经风暴下 台湾有哪些机遇与挑战</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/10/n10965703.md#1" target="_blank">共产暴政录：广西文革大屠杀事件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/6/n11637774.md#1" target="_blank">澳媒刊登希腊裔法轮功学员的修炼故事</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/14/n10714814.md#1" target="_blank">川普总统在93号航班9·11悼念仪式上的讲话全文</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/22/n10869347.md#1" target="_blank">感恩节 法轮大法弟子感念师恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/2/n13413207.md#1">【未解之谜】发现隐形器官？！</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/1/n13410518.md#1">明朝三医生懂起死回生之术 淡泊名利令人敬重</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/4/n13417452.md#1">【舞蹈三剑客】印度舞大挑战 只排练4小时</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/11/30/n13408645.md#1">【百年真相】迟来的奖章 医学巨星汤飞凡陨落</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/3/n13415764.md#1">【未解之谜】百慕大三角大揭秘</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/7/n13421943.md#1">【拍案惊奇】马云下落不明 薄熙来临时出狱？</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/7/n13422843.md#1">【秦鹏直播】公务员要过苦日子？御用专家警告</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/6/n13420399.md#1">【探索时分】台湾F16V成军 飞行员赴美训练</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/6/n13420076.md#1">遭性侵女被重判 上海小红楼圈养性奴再惹议</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/6/n13419356.md#1">抓捕周焯华 传习近平六次批示</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/6/n13420408.md#1">白宫宣布美国外交抵制2022北京冬奥会</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/6/n13420552.md#1">“十年没吃米饭” 王晶爆刘德华的减肥生活</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/5/n13418739.md#1">被指抄袭日剧 赵丽颖新戏海报紧急删除</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/6/n13419662.md#1">BTS全员开设个人IG账号 追踪人数迅速飙升</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/5/n13418557.md#1">克鲁尼拒1天逾三千万美元酬劳 原因惊呆网友</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/6/n13420407.md#1">吴亦凡千万资产遭冻结 不动产查封期限为三年</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/7/n13421189.md#1">为何瑞典人喊“台湾的冬天冷到受不了”？</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/4/n13417029.md#1">怕冷体质可以逆转！3招让你从头到脚变暖</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/6/n13419057.md#1">打中国灭活疫苗 和感染新冠出现相似病理变化？</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/6/n13419539.md#1">银行户头多出百万美元像恶梦 英女求助媒体</a></li>
-<li><a href="https://github.com/wzpiqm352/djy/blob/master/gb/21/12/6/n13419343.md#1">丹麦降暴风雪 IKEA顾客与员工在店里过夜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/31/n13342805.md#1">刷牙就能让白发变黑  这些中医处方为何历久不衰？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/29/n13339418.md#1">世界十大奇险建筑“悬空寺”的千古之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/29/n13339482.md#1">【未解之谜】寻找转世灵童</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/1/n13346265.md#1">【百年真相】从高官到囚徒 崔月犂如何走出秦城</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/30/n13341559.md#1">【舞蹈三剑客】神韵全球巡演期间 难忘的美食回忆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13355885.md#1">【新闻大家谈】五角大楼揭中共“最高机密”？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13356732.md#1">【秦鹏直播】马云及海底捞遇麻烦 因惹赵家人？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13356729.md#1">【古韵流芳】不计荣辱悲欢 心如砥柱刘禹锡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13352549.md#1">【中国观察】张高丽性丑闻的结局将如何</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351361.md#1">剧中小动作引共鸣 刘涛回应是否在工地干过活</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13352001.md#1">【一线采访】多地现抢购潮 爆发打斗场面</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351361.md#1">剧中小动作引共鸣 刘涛回应是否在工地干过活</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13354084.md#1">顶新发型看秀气场强大 范冰冰获时尚网红大赞</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351814.md#1">周润发与路人合照罕见露愠色 原因曝光</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13349727.md#1">谢丽金受荨麻疹之苦 为健康登山差点送命</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13354413.md#1">林青霞庆67岁生日 手上鸽子蛋巨钻抢镜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/31/n13342805.md#1">刷牙就能让白发变黑  这些中医处方为何历久不衰？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/1/n13344694.md#1">10类护眼食物大公开 吃对三餐远离眼病</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13351980.md#1">大豆原来这么好 10种豆制品 哪些营养胜一筹</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13349792.md#1">大陆小说作家自曝账号被盗 骇客竟帮忙写稿</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13350110.md#1">小白球被鳄鱼咬走 挥杆的美国男子笑歪了</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wzpiqm352/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wzpiqm352/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/8/n13424450.htm">美参众两院达共识 维持美军阻中共攻台</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/8/n13424450.htm">美参众两院达共识 维持美军阻中共攻台</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/wzpiqm352/djy/blob/master/gb/21/12/8/n13424450.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wzpiqm352/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wzpiqm352/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wzpiqm352/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wzpiqm352/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wzpiqm352/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wzpiqm352/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wzpiqm352/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wzpiqm352/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wzpiqm352/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wzpiqm352/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wzpiqm352/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wzpiqm352/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wzpiqm352/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wzpiqm352/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wzpiqm352/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wzpiqm352/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wzpiqm352/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wzpiqm352/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/wzpiqm352/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wzpiqm352/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wzpiqm352/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wzpiqm352/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wzpiqm352/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wzpiqm352/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/wzpiqm352/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wzpiqm352/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wzpiqm352/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wzpiqm352/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wzpiqm352/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wzpiqm352/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wzpiqm352/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wzpiqm352/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wzpiqm352/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wzpiqm352/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wzpiqm352/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wzpiqm352/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wzpiqm352/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wzpiqm352/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wzpiqm352/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wzpiqm352/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wzpiqm352/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wzpiqm352/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wzpiqm352/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wzpiqm352/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wzpiqm352/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wzpiqm352/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wzpiqm352/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wzpiqm352/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/12/8/n13424450.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
